# Beginner_Projects

./: Debug 1.py  Debug2.py  Debug3.py  Debug4.py  Debug5.py  Maze (1).py  README.md  Untitled Diagram.drawio  V1 Debug.py  V1 debug.py  V2 Debug.py  V2 debug .py  V3 Debug .py  V4 Debug.py  logo.py  main.py  pyproject.toml
