[tool.poetry]
name = "repl-nix-blackjack-startlf-solution"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_blackjack_startlf_solution"}]

[tool.poetry.dependencies]
python = "^3.10"
replit = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
